--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -12,14 +12,14 @@ name = "Starter Blog"
   menu_title = "#2b2b2b"
 
   # Home sections
-  home_section_odd = "rgb(247, 250, 252)"
-  home_section_even = "rgb(247, 250, 252)"
+  #home_section_odd = "rgb(247, 250, 252)"
+  #home_section_even = "rgb(247, 250, 252)"
 
 [dark]
   primary = "#bbdefb"
   link = "#bbdefb"
   link_hover = "#bbdefb"
   background = "rgb(26, 32, 44)"
-  home_section_odd = "rgb(26, 32, 44)"
-  home_section_even = "rgb(26, 32, 44)"
+  #home_section_odd = "rgb(26, 32, 44)"
+  #home_section_even = "rgb(26, 32, 44)"
   menu_primary = "rgb(26, 32, 44)"
